# spu

./: .bazel-steward.yaml  .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .licenserc.yaml  .markdownlint.yaml  .pre-commit-config.yaml  ALKAID_README.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LEGAL.md  MODULE.bazel  OWNERS  README.md  REPO_LAYOUT.md  WORKSPACE  aby3.out  alkaid.out  build_and_packaging.sh  build_wheel_entrypoint.sh  e -i 572cbdd^q  eq_note.md  nohup.out  pdm_build.py  pyproject.toml  pyrightconfig.json  refresh-compile-command-bazel-module.py  refresh-compile-commands.py  renovate.json  requirements-dev.txt  requirements.txt  requirements_dev_darwin_lock.txt  requirements_dev_lock.txt  (+8 more)
bazel/: BUILD.bazel  cc_static_library.bzl  curve25519-donna.BUILD  easyloggingpp.BUILD  eigen.BUILD  emp-ot.BUILD  emp-tool.BUILD  emp-zk.BUILD  glob_lit_test.bzl  hexl.BUILD  ipp.BUILD  llvm.bzl  local_openmp_macos.BUILD  microsoft_apsi.BUILD  microsoft_fourqlib.BUILD  microsoft_gsl.BUILD  microsoft_kuku.BUILD  nvidia_cutlass.BUILD  openblas.BUILD  pip_rules.bzl  psi_cpp.BUILD  repositories.bzl  seal.BUILD  spu.bzl  xtensor.BUILD  xtl.BUILD  zlib.BUILD  zstd.BUILD
bazel/patches/: apsi-gen.patch  apsi.patch  apsi_bin_bundle.patch  emp-ot.patch  emp-tool-cmake.patch  emp-tool-sse2neon.patch  emp-tool.patch  emp-zk.patch  fourq.patch  grpc-1.66.patch  grpc-module-file.patch  grpc.patch  hexl.patch  openssl-build-file.patch  openssl-module-file.patch  protobuf-xla.patch  pytorch.patch  pytorch_record.patch  rules_proto_grpc_python-5.0.0.patch  seal-evaluator.patch  seal.patch  tensorflow.patch  tsl.patch  xla-non-hermetic-python.patch  xla.patch  yacl.patch
examples/cpp/: BUILD.bazel  simple_dp_psi.cc  simple_in_memory_psi.cc  simple_lr.cc  simple_pphlo.cc  simple_psi.cc  utils.cc  utils.h
examples/data/: BUILD.bazel  breast_cancer_a.csv  breast_cancer_b.csv  perfect_logit_a.csv  perfect_logit_b.csv  pir_client_data.csv  pir_server_data.csv  psi_1.csv  psi_2.csv
experimental/squirrel/: BUILD.bazel  README.md  bin_matvec_prot.cc  bin_matvec_prot.h  bin_matvec_prot_test.cc  binning.cc  binning.h  binning_test.cc  calc_auc.py  objectives.cc  objectives.h  objectives_test.cc  squirrel_demo_main.cc  tree_build_worker.cc  tree_build_worker.h  tree_builder.cc  tree_builder.h  utils.cc  utils.h  utils_test.cc
libspu/core/: BUILD.bazel  array_ref.cc  array_ref.h  array_ref_test.cc  bit_utils.cc  bit_utils.h  bit_utils_bench.cc  bit_utils_test.cc  cexpr.cc  cexpr.h  config.cc  config.h  context.cc  context.h  encoding.cc  encoding.h  encoding_test.cc  field_type_mapping.cc  field_type_mapping.h  half.h  logging.cc  logging.h  memref.cc  memref.h  memref_test.cc  ndarray_ref.cc  ndarray_ref.h  ndarray_ref_test.cc  object.cc  object.h  parallel_utils.cc  parallel_utils.h  platform_utils.cc  platform_utils.h  platform_utils_test.cc  prelude.h  pt_buffer_view.cc  pt_buffer_view.h  pt_buffer_view_test.cc  shape.h  (+19 more)
libspu/cuda_support/: BUILD.bazel  kernels.h  utils_test.cc
libspu/device/: BUILD.bazel  api.cc  api.h  debug_dump_constant.cc  device.proto  executor.cc  executor.h  intrinsic_table.h  io.cc  io.h  io_test.cc  symbol_table.cc  symbol_table.h  test_utils.h
libspu/mpc/: BUILD.bazel  ab_api.cc  ab_api.h  ab_api_test.cc  ab_api_test.h  api.cc  api.h  api_test.cc  api_test.h  api_test_params.h  context_log.cc  factory.cc  factory.h  io_interface.h  io_shamir_test.cc  io_shamir_test.h  io_test.cc  io_test.h  kernel.cc  kernel.h  mfippa_test copy.cc  mfippa_test.cc  object.cc  object.h  offline_recorder.cc
libspu/pir/: BUILD.bazel  OWNERS  pir.cc  pir.h  pir.proto  pir_test.cc  seal_mpir.cc  seal_mpir.h  seal_mpir_test.cc  seal_pir.cc  seal_pir.h  seal_pir_test.cc  seal_pir_utils.cc  seal_pir_utils.h
libspu/psi/: BUILD.bazel  bucket_psi.cc  bucket_psi.h  bucket_psi_test.cc  bucket_ub_psi.cc  bucket_ub_psi.h  bucket_ub_psi_test.cc  bucket_unbalanced_psi_test.cc  memory_psi.cc  memory_psi.h  memory_psi_test.cc  prelude.h  psi.proto
sml/fyy_pca/: BUILD.bazel  jacobi_evd.py  jacobi_pca.py
sml/glm/: .gitignore  .tags  .tags_sorted_by_file  BUILD.bazel  glm.py  glm_emul.py  glm_test.py  gtest.py
sml/kmeans/: BUILD.bazel  kmeans.py  kmeans_emul.py  kmeans_test.py
sml/linear_model/: BUILD.bazel  glm.py  logistic.py  pla.py  quantile.py  ridge.py  ridge_emul.py  ridge_test.py  sgd_classifier.py  simple_sgd.py  simple_sgd_emul.py  simple_sgd_test.py
sml/lr/: BUILD.bazel  simple_lr.py  simple_lr_emul.py  simple_lr_test.py
spu/: BUILD.bazel  __init__.py  api.py  libpsi.cc  libpsi.pyi  libspu.cc  libspu.pyi  pir.py  pir_pb2.py  psi.py  psi_pb2.py  pybind_caster.h  pychannel.h  spu.proto  spu_pb2.py  version.py
spu/binding/: BUILD.bazel  _lib.cc  api.py  exported_symbols.lds  libspu.cc  psi.py
spu/compiler/: .clang-format  BUILD.bazel  compile.cc  compile.h  main.cc
spu/core/: BUILD.bazel  array_ref.cc  array_ref.h  array_ref_test.cc  bit_utils_test.cc  encoding.cc  encoding.h  encoding_test.cc  log.cc  log.h  ndarray_ref.cc  ndarray_ref.h  ndarray_ref_test.cc  parallel_utils.cc  parallel_utils.h  platform_utils.cc  platform_utils.h  profile.cc  profile.h  profile_test.cc  shape_util.cc  shape_util.h  shape_util_test.cc  trace.cc  trace.h  trace_test.cc  type.cc  type.h  type_test.cc  type_util.cc  type_util.h  vectorize.h  vectorize_test.cc  xt_helper.cc  xt_helper.h  xt_helper_test.cc
spu/device/: .clang-format  BUILD.bazel  api.cc  api.h  device.proto  executor.cc  executor.h  frame.cc  frame.h  io.cc  io.h  io_test.cc  pphlo_executor.cc  pphlo_executor.h  pphlo_executor_bench.cc  pphlo_executor_debug_runner.cc  pphlo_executor_test.cc  pphlo_type_checker.cc  pphlo_type_checker.h  profiler.h  readme.md  symbol_table.cc  symbol_table.h  test_utils.h  type_checker.cc  type_checker.h
spu/dialect/: BUILD.bazel  pphlo_attrs.h  pphlo_attrs.td  pphlo_base_enums.cc  pphlo_base_enums.h  pphlo_base_enums.td  pphlo_dialect.cc  pphlo_dialect.h  pphlo_dialect.td  (+7 more)
src/: .bazeliskrc  .bazelrc  MODULE.bazel
(+3460 files in other folders)
