# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "exported_symbols.lds",
        "version_script.lds",
    ],
    visibility = ["//visibility:private"],
)

pybind_extension(
    name = "libspu",
    srcs = ["libspu.cc"],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location //spu:exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location //spu:version_script.lds)",
        ],
    }),
    deps = [
        ":exported_symbols.lds",
        ":pybind_caster",
        ":pychannel",
        ":version_script.lds",
        "@spulib//libspu:version",
        "@spulib//libspu/compiler:compile",
        "@spulib//libspu/compiler/common:compilation_context",
        "@spulib//libspu/core:logging",
        "@spulib//libspu/device:api",
        "@spulib//libspu/device:io",
        "@spulib//libspu/device/pphlo:pphlo_executor",
        "@yacl//yacl/link",
    ],
)

pybind_extension(
    name = "libpsi",
    srcs = ["libpsi.cc"],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location //spu:exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location //spu:version_script.lds)",
        ],
    }),
    deps = [
        ":exported_symbols.lds",
        ":version_script.lds",
        "@psi//psi/apps/psi_launcher:launch",
        "@psi//psi/legacy:memory_psi",
        "@yacl//yacl/link",
    ],
)

pybind_library(
    name = "pychannel",
    hdrs = ["pychannel.h"],
    visibility = ["//visibility:private"],
    deps = [
        "@yacl//yacl/link/transport:channel",
    ],
)

pybind_library(
    name = "pybind_caster",
    hdrs = ["pybind_caster.h"],
    visibility = ["//visibility:private"],
    deps = [
        "@yacl//yacl/base:buffer",
    ],
)
