# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "spulib",
    version = "0.9.4",
    compatibility_level = 1,
)

bazel_dep(name = "grpc", version = "1.74.1")
single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = ["//bazel/patches:grpc.patch"],
    version = "1.74.1",
)

bazel_dep(name = "protobuf", version = "32.1")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "apple_support", version = "1.24.3")
bazel_dep(name = "rules_cc", version = "0.0.12")
bazel_dep(name = "rules_cuda", version = "0.2.3")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
single_version_override(
    module_name = "rules_foreign_cc",
    patch_strip = 1,
    patches = [
        "//bazel/patches:rules_foreign_cc.patch",
    ],
    version = "0.15.0",
)

bazel_dep(name = "bazel_features", version = "1.20.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_proto", version = "6.0.0-rc1")
bazel_dep(name = "spdlog", version = "1.15.2")
bazel_dep(name = "fmt", version = "11.1.4")
bazel_dep(name = "abseil-cpp", version = "20250814.1")

bazel_dep(name = "rules_python", version = "0.29.0")
bazel_dep(name = "magic_enum", version = "0.9.6")
bazel_dep(name = "openssl", version = "3.3.2.bcr.1")
single_version_override(
    module_name = "openssl",
    version = "3.3.2.bcr.1",
)

bazel_dep(name = "boringssl", version = "0.20250818.0")
single_version_override(
    module_name = "boringssl",
    version = "0.20250818.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    python_version = "3.11",
)

# --registry=https://baidu.github.io/babylon/registry
bazel_dep(name = "leveldb", version = "1.23")

# self-hosted registry
bazel_dep(name = "eigen", version = "3.4.90-20230801-66e8f3")
bazel_dep(name = "emp-tool", version = "0.2.5.bcr.1")
bazel_dep(name = "emp-ot", version = "0.2.4.bcr.1")
bazel_dep(name = "brpc", version = "1.15.0")
git_override(
    module_name = "brpc",
    commit = "50a9075de62f1d2b825b902acbfecfddb3d9f314",
    patch_strip = 1,
    patches = [
        "//bazel/patches:brpc-string_view.patch",
    ],
    remote = "https://github.com/apache/brpc.git",
)

bazel_dep(name = "seal", version = "4.1.1")
bazel_dep(name = "cutlass", version = "3.5.1")
bazel_dep(name = "llvm-raw", version = "20251010.0-3a6b818")
bazel_dep(name = "sse2neon", version = "1.7.0-20240330-8df2f48")

llvm = use_extension("@llvm-raw//utils/bazel:extension.bzl", "llvm")
llvm.configure(
    targets = [
        "AArch64",
        "X86",
        "ARM",
    ],
)
use_repo(llvm, "llvm-project")

bazel_dep(name = "stablehlo", version = "20251004.0-0a4440a")
bazel_dep(name = "xla", version = "20251016.0-9f150f6")
single_version_override(
    module_name = "xla",
    patch_strip = 1,
    patches = [
        "//bazel/patches:xla.patch",
    ],
    version = "20251016.0-9f150f6",
)
bazel_dep(name = "yacl", version = "0.4.5b10-nightly-20250110")

spu_dependencies = use_extension("//bazel:defs.bzl", "non_module_dependencies")
use_repo(spu_dependencies, "xtensor")

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "macos_omp_x64",
    build_file = "@yacl//bazel:local_openmp_macos.BUILD",
    path = "/usr/local/opt/libomp",
)

new_local_repository(
    name = "macos_omp_arm64",
    build_file = "@yacl//bazel:local_openmp_macos.BUILD",
    path = "/opt/homebrew/opt/libomp/",
)

# test
bazel_dep(name = "googletest", version = "1.15.2", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.8.5", dev_dependency = True)
